--- a/calculate_retention_index.ipynb
+++ b/calculate_retention_index.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKHTdmNRursH9a7MTRFyYb",
+      "authorship_tag": "ABX9TyMIhgOIVm8Os49CE1VjYatf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,6 +50,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title Just press the arrow, and it will prompt you to upload your files\n",
         "import math\n",
         "import pandas as pd\n",
         "from google.colab import files\n",
@@ -116,7 +117,8 @@
         "# df_result is available for further use\n"
       ],
       "metadata": {
-        "id": "40RI3279JDIh"
+        "id": "40RI3279JDIh",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
